--- a/package.json
+++ b/package.json
@@ -61,25 +61,34 @@
   ],
   "dependencies": {
     "@node-rs/argon2": "^1.1.0",
+    "@types/html-to-text": "^8.1.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
+    "express-mysql-session": "^2.1.7",
+    "express-session": "^1.17.2",
+    "handlebars": "^4.7.7",
     "helmet": "^5.0.2",
+    "html-to-text": "^8.1.0",
     "module-alias": "^2.2.2",
     "morgan": "^1.10.0",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.2"
   },
   "devDependencies": {
     "@types/command-line-args": "^5.2.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
+    "@types/express-mysql-session": "^2.1.3",
+    "@types/express-session": "1.17.0",
     "@types/find": "^0.2.1",
     "@types/fs-extra": "^9.0.13",
     "@types/jasmine": "^3.10.3",
     "@types/jsonfile": "^6.0.1",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.18",
+    "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
